syntax = "proto3";

package grpc;

message SearchRequest {
    string name = 1;
    string category = 2;
    string owner = 3;
}

message Item {
    string id = 1;
    int32 isEvent = 2;
}

message SearchResponse {
    repeated Item items = 1;
}

service SearchService {
    rpc GetItems(SearchRequest) returns (SearchResponse) {}
}